--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,12 @@ services:
     db:
         image: mysql
         ports: 
-            - "3306:3306"
+            - "${DB_PORT}:3306"
         command: --default-authentication-plugin=mysql_native_password
         environment:
-            MYSQL_DATABASE: dbname
-            MYSQL_PASSWORD: test
-            MYSQL_ROOT_PASSWORD: test 
+            #MYSQL_DATABASE: dbname
+            MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+            MYSQL_ROOT_PASSWORD: ${ROOT_PASSWORD}
         volumes:
             - ./dataBase_crud:/docker-entrypoint-initdb.d 
             - ./conf:/etc/mysql/conf.d
@@ -18,7 +18,7 @@ services:
     www:
         build: .
         ports: 
-            - "80:80"
+            - "${APP_PORT}:80"
         volumes:
             - /home/ansibleadmin/unitTest:/var/www/html
         links:
@@ -30,10 +30,10 @@ services:
         links: 
             - db:db
         ports:
-            - 9000:80
+            - ${MYSQL_PORT}:80
         environment:
-            MYSQL_USER: root
-            MYSQL_PASSWORD: test
-            MYSQL_ROOT_PASSWORD: test 
+            MYSQL_USER: ${MYSQL_USER}
+            MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+            MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD} 
 volumes:
     persistent:
